Fixed overlapping logo and h1 on show header

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -407,4 +407,9 @@ h2 {
       border: 2px solid $accent-color;
     }
   }
+
+  .show-title {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
